--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     </head>
     <body>
         <div id="map"></div>
-        <h1 id="time">1/20/2022, 7:39:20 PM</h1>
+        <div class="info">
+            <h2>Key: </h2>
+            <p><img src="iconNEC.png"> NEC Trains</p>
+            <p><img src="iconState.png"> State Supported</p>
+            <p><img src="iconLong.png"> Long Distance Trains</p>
+            <h1 id="time">1/20/2022, 7:39:20 PM</h1>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
