--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
-        <script src="rotationShit.js"></script>
         <script src="domToImage.js"></script>
         <script src="easyPrint"></script>
         <meta charset="utf-8">
@@ -14,11 +13,14 @@
     <body>
         <div id="map"></div>
         <div class="info">
-            <h2>Key: </h2>
-            <p><img src="iconNEC.png"> NEC Trains</p>
-            <p><img src="iconState.png"> State Supported</p>
-            <p><img src="iconLong.png"> Long Distance Trains</p>
-            <h1 id="time">1/20/2022, 7:39:20 PM</h1>
+            <h1 class="titleKey">&copy; Piero 2022</h1>
+            <h1 class="titleKey" id="time">January 00, 0000 00:00 America/Chicago</h1>
+        </div>
+        <div class="key">
+            <h2 class="titleKey">Key: </h2>
+            <!--<p><img class="iconKey" src="iconNEC.png"> NEC Trains</p>-->
+            <p><img class="iconKey" src="iconState.png"> State Supported</p>
+            <p><img class="iconKey" src="iconLong.png"> Long Distance Trains</p>
         </div>
         <script src="script.js"></script>
     </body>
