removed specific cali code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="key">
             <h2 class="titleKey">Key: </h2>
-            <!--<p><img class="iconKey" src="iconNEC.png"> NEC Trains</p>-->
+            <p><img class="iconKey" src="iconNEC.png"> NEC Trains</p>
             <p><img class="iconKey" src="iconState.png"> State Supported</p>
             <p><img class="iconKey" src="iconLong.png"> Long Distance Trains</p>
         </div>
